fixing communication problem